--- a/KatlaSportNg/src/app/hive-management/lists/hive-list.component.html
+++ b/KatlaSportNg/src/app/hive-management/lists/hive-list.component.html
@@ -17,9 +17,14 @@
             <div class="btn-group mr-2" role="group" aria-label="Delete group" *ngIf="!hive.isDeleted" (click)="onDelete(hive.id)">
               <button type="button" class="btn btn-danger">Delete</button>
             </div>
+          </span>
+          <span class="btn-toolbar" role="toolbar" aria-label="Hive action buttons" style="display: block; white-space:nowrap;">
             <div class="btn-group mr-2" role="group" aria-label="View group">
               <button routerLink="/hive/{{hive.id}}/sections" type="button" class="btn btn-primary">View sections</button>
             </div>
+          </span>
+
+          <span class="btn-toolbar" role="toolbar" aria-label="Hive action buttons" style="display: block; white-space:nowrap;">
             <div class="btn-group" role="group" aria-label="Edit group">
               <button routerLink="/hive/{{hive.id}}" type="button" class="btn btn-primary">Edit</button>
             </div>
