--- a/KatlaSportNg/src/app/hive-management/lists/hive-list.component.html
+++ b/KatlaSportNg/src/app/hive-management/lists/hive-list.component.html
@@ -17,7 +17,12 @@
             <div class="btn-group mr-2" role="group" aria-label="Delete group" *ngIf="!hive.isDeleted" (click)="onDelete(hive.id)">
               <button type="button" class="btn btn-danger">Delete</button>
             </div>
-            <!-- TODO STEP 6 - Add buttons here. -->
+            <div class="btn-group mr-2" role="group" aria-label="View group">
+              <button routerLink="/hive/{{hive.id}}/sections" type="button" class="btn btn-primary">View sections</button>
+            </div>
+            <div class="btn-group" role="group" aria-label="Edit group">
+              <button routerLink="/hive/{{hive.id}}" type="button" class="btn btn-primary">Edit</button>
+            </div>
           </span>
         </td>
       </tr>
