--- a/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
+++ b/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
@@ -2,8 +2,26 @@
   <h2>Hive Sections for Hive</h2>
   <table class="table table-nonfluid">
     <thead>
+      <th scope="col">#</th>
+      <th scope="col">Name</th>
+      <th scope="col">Code</th>
     </thead>
     <tbody>
+      <tr *ngFor="let section of hiveSections">
+        <th scope="row">{{section.id}}</th>
+        <th scope="row">{{section.name}}</th>
+        <th scope="row">{{section.code}}</th>
+        <td>
+          <span class="btn-toolbar" role="toolbar" aria-label="Hive action buttons" style="display: block; white-space:nowrap;">
+            <div class="btn-group mr-2" role="group" aria-label="Delete group" *ngIf="!section.isDeleted" (click)="onDelete(section.id)">
+              <button type="button" class="btn btn-danger">Delete</button>
+            </div>
+            <div class="btn-group" role="group" aria-label="Edit section">
+              <button routerLink="/section/{{section.id}}" type="button" class="btn btn-primary">Edit</button>
+            </div>
+          </span>
+        </td>
+      </tr>
     </tbody>
   </table>
   <div class="btn-toolbar" role="toolbar" aria-label="Action buttons">
