--- a/KatlaSportNg/src/app/hive-management/forms/hive-form.component.html
+++ b/KatlaSportNg/src/app/hive-management/forms/hive-form.component.html
@@ -15,10 +15,34 @@
         <div *ngIf="name.errors.minlength">Hive Name must be at least 4 characters long.</div>
       </div>
     </div>
+    <div class="form-group">
+      <label for="code" id="codeLabel">Hive Code</label>
+      <input type="text" class="form-control" id="code" aria-describedby="codeLabel" minlength="1" maxlength="5" required [(ngModel)]="hive.code" name="code" #code="ngModel">
+      <div *ngIf="code.invalid && (code.dirty || code.touched)" class="alert alert-danger">
+        <div *ngIf="code.errors.required">Hive Code is required.</div>
+        <div *ngIf="code.errors.minlength">Hive Code must be at least 1 character long.</div>
+        <div *ngIf="code.errors.maxlength">Hive Code must not exceed 5 characters.</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="address" id="addressLabel">Hive Address</label>
+      <input type="text" class="form-control" id="address" aria-describedby="addressLabel" maxlength="300" required [(ngModel)]="hive.address" name="address" #address="ngModel">
+      <div *ngIf="address.invalid && (address.dirty || address.touched)" class="alert alert-danger">
+        <div *ngIf="address.errors.required">Hive Address is required.</div>
+        <div *ngIf="address.errors.maxlength">Hive Address must not exceed 300 characters.</div>
+      </div>
+    </div>
     <div class="form-group" *ngIf='existed'>
       <label for="lastUpdated" id="lastUpdatedLabel">Last Update</label>
       <input type="text" class="form-control" id="lastUpdated" aria-describedby="lastUpdatedLabel" required [(ngModel)]="hive.lastUpdated"
         name="lastUpdated" #lastUpdated="ngModel" readonly>
+    </div>
+    <div class="form-group">
+      <button type="button" routerLink="/hives" class="btn btn-secondary mr-2">Back</button>
+      <button type="button" class="btn btn-primary mr-2" (click)="onSubmit()">Save</button>
+      <button type="button" class="btn btn-danger mr-2" *ngIf="!hive.isDeleted" (click)="onDelete()">Delete</button>
+      <button type="button" class="btn btn-warning mr-2" *ngIf="hive.isDeleted" (click)="onUndelete()">Undelete</button>
+      <button type="button" class="btn btn-danger mr-2" *ngIf="existed && hive.isDeleted" (click)="onPurge()">Purge</button>
     </div>
   </form>
 </div>
