--- a/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
+++ b/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
@@ -32,8 +32,7 @@
       <button routerLink="/hives" type="button" class="btn btn-primary">Back</button>
     </div>
     <div class="btn-group" role="group" aria-label="Add group">
-      <button routerLink="/hive/{{this.hiveId}}" type="button" class="btn btn-primary">Add hive section</button>
+      <button routerLink="/hive/section" type="button" class="btn btn-primary">Add hive section</button>
     </div>
   </div>
 </div>
-
