--- a/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
+++ b/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
@@ -20,7 +20,7 @@
               <button type="button" class="btn btn-success">Undelete</button>
             </div>
             <div class="btn-group" role="group" aria-label="Edit section">
-              <button routerLink="/section/{{section.id}}" type="button" class="btn btn-primary">Edit</button>
+              <button [routerLink]="['/hive', hiveId, 'edit-section', section.id]" type="button" class="btn btn-primary">Edit</button>
             </div>
           </span>
         </td>
@@ -32,7 +32,7 @@
       <button routerLink="/hives" type="button" class="btn btn-primary">Back</button>
     </div>
     <div class="btn-group" role="group" aria-label="Add group">
-      <button routerLink="/hive/section" type="button" class="btn btn-primary">Add hive section</button>
+      <button [routerLink]="['/hive', hiveId, 'add-section']" type="button" class="btn btn-primary">Add hive section</button>
     </div>
   </div>
 </div>
