--- a/KatlaSportNg/src/app/hive-management/forms/hive-section-form.component.html
+++ b/KatlaSportNg/src/app/hive-management/forms/hive-section-form.component.html
@@ -3,17 +3,21 @@
   <form (ngSubmit)="onSubmit()" #sectionForm="ngForm">
     <div class="form-group">
       <label for="name">Name:</label>
-      <input type="text" class="form-control" id="name" name="name" [(ngModel)]="section.name" required>
-      <div *ngIf="sectionForm.controls['name']?.invalid && sectionForm.controls['name']?.touched" class="text-danger">
-        Name is required.
+      <input type="text" class="form-control" id="name" name="name" minlength="4" maxlength="60" required [(ngModel)]="section.name">
+      <div *ngIf="sectionForm.controls['name']?.invalid && sectionForm.controls['name']?.touched" class="alert alert-danger">
+          <div *ngIf="sectionForm.controls['name'].errors?.required">The section name is required.</div>
+          <div *ngIf="sectionForm.controls['name'].errors?.minlength">The section name must be longer than 4 characters.</div>
+          <div *ngIf="sectionForm.controls['name'].errors?.maxlength">The section title should not exceed 300 characters.</div>
       </div>
-    </div>
+  </div>
     <div class="form-group">
       <label for="code">Code:</label>
-      <input type="text" class="form-control" id="code" name="code" [(ngModel)]="section.code" required>
-      <div *ngIf="sectionForm.controls['code']?.invalid && sectionForm.controls['code']?.touched" class="text-danger">
-        Code is required.
-      </div>
+      <input type="text" class="form-control" id="code" name="code" minlength="5" maxlength="5" required [(ngModel)]="section.code">
+      <div *ngIf="sectionForm.controls['code']?.invalid && sectionForm.controls['name']?.touched" class="alert alert-danger">
+        <div *ngIf="sectionForm.controls['code'].errors?.required">The section code is required.</div>
+        <div *ngIf="sectionForm.controls['code'].errors?.minlength">The code must be 5 characters long.</div>
+        <div *ngIf="sectionForm.controls['code'].errors?.maxlength">The code must be 5 characters long.</div>
+    </div>
     </div>
     <div class="btn-toolbar" role="toolbar" aria-label="Action buttons">
       <div class="btn-group" role="group" aria-label="Back group">
